Modularization done, needs to make executable now